--- a/my-react-app/src/pages/discussionBoard.css
+++ b/my-react-app/src/pages/discussionBoard.css
@@ -84,3 +84,16 @@ form textarea {
   padding: 20px;
   background-color: #f9f9f9;
 }
+
+.favourite {
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 24px;
+  color: grey;
+}
+
+.favourite.active {
+  color: red;
+}
+
