--- a/NEW WEBSITE/frontend/src/components/Messages.css
+++ b/NEW WEBSITE/frontend/src/components/Messages.css
@@ -1,17 +1,3 @@
-.timestamp {
-    fontSize: 10px;
-    color: black;
-}
-
-button {
-    padding: 10px;
-    top-margin: 5px;
-    bottom-margin: 5px;
-    background: #4CAF50;
-    color: #fff;
-    boarder: #fff;
-}
-
 /* Main container */
 .messages-main {
   display: flex;
@@ -59,6 +45,7 @@ button {
   background-color: #f0f0f0;
 }
 
+/* Message pane */
 .message-pane {
   flex-grow: 1;
   display: flex;
@@ -81,8 +68,9 @@ button {
 /* Message and Announcement Items */
 .message-item,
 .announcement-item {
-  padding: 5px;
-  margin-bottom: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #eee;
 }
 
 /* Send message form */
