Timestamps update and work, added read receipts

--- a/NEW WEBSITE/frontend/src/components/Messages.css
+++ b/NEW WEBSITE/frontend/src/components/Messages.css
@@ -97,6 +97,10 @@
   cursor: pointer;
 }
 
-.read-tag {
+.send-message-form button {
+  display: block;
+}
 
+.announcement-form button {
+  display: block;
 }
