--- a/NEW WEBSITE/frontend/src/components/Dashboard.css
+++ b/NEW WEBSITE/frontend/src/components/Dashboard.css
@@ -20,12 +20,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px; /* Space between buttons */
+  gap: 5px; /* Space between buttons */
   float: left;
 }
 
 .nav-container button {
-  width: 130px; /* Set a fixed width for all buttons */
+  width: 100px; /* Set a fixed width for all buttons */
   height: 50px; /* Set a fixed height for all buttons */
   padding: 0; /* Remove padding since height is fixed */
   background-color: #C4BB9B;
@@ -77,6 +77,7 @@
   text-overflow: ellipsis; /* Add ellipsis for overflowing text */
   white-space: nowrap; /* Prevent text wrapping */
   transition: transform 0.2s ease, background-color 0.2s ease;
+  float: center;
 }
 
 .course-bubble:hover {
